Update copyright year in index.html
* html/index.html (Contact): Update copyright year.

--- a/html/index.html
+++ b/html/index.html
@@ -71,7 +71,7 @@
 
         <div class="footer">
             <div class="container">
-                <p>Copyright 2016 <a href="https://fsf.org">Free Software Foundation</a>, Inc.</p>
+                <p>Copyright 2016-2020 <a href="https://fsf.org">Free Software Foundation</a>, Inc.</p>
                 <p>Design provided by <a href="http://nicolas.petton.fr">Nicolas Petton</a></p>
                 <p>
                     This website is licensed under the
