Add lang attributes to the html tag
* html/index.html:
* admin/archive-contents.el (archive--html-header): Add lang attributes
to the html tag as recommended by W3C.

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en" xml:lang="en">
     <head>
         <title>GNU Emacs Lisp Package Archive</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
