* html/index.html: Minor improvement to wording.

--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
 
                 <ul>
                   <li>
-                    To contribute a new package refer to the
+                    To contribute a new package, refer to the
                     <a href="http://git.savannah.gnu.org/cgit/emacs/elpa.git/plain/README">README</a>.
                   </li>
                   <li>
@@ -60,7 +60,7 @@
                     If you need help, you could try the <a href="https://lists.gnu.org/mailman/listinfo/help-gnu-emacs">help-gnu-emacs mailing list</a>.
                   </li>
                   <li>
-                    For general inquiries, please contact <a href="https://lists.gnu.org/mailman/listinfo/emacs-devel">emacs-devel mailing list</a>.
+                    For general inquiries, please contact the <a href="https://lists.gnu.org/mailman/listinfo/emacs-devel">emacs-devel mailing list</a>.
                   </li>
                 </ul>
 
